--- a/ClientWPF/MainWindow.xaml
+++ b/ClientWPF/MainWindow.xaml
@@ -124,7 +124,7 @@
 
                 <StackPanel Orientation="Horizontal" Margin="0,50,0,0">
                     <Button Width="100" Height="40" Content="LOGIN" Margin="60,0,60,0" Click="sendToServ_Click"/>
-                    <Button Width="100" Height="40" Content="REGISTER"/>
+                    <Button Width="100" Height="40" Content="REGISTER" Click="Button_Click"/>
                 </StackPanel>
 
             </StackPanel>
