--- a/ClientWPF/Sign_up.xaml
+++ b/ClientWPF/Sign_up.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ClientWPF.Account"
+﻿<Window x:Class="ClientWPF.Sign_up"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientWPF"
         mc:Ignorable="d"
-        Title="Account"  Width="370" Height="671"
+        Title="Sign_up"  Width="370" Height="671"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
         >
@@ -49,18 +49,12 @@
             </Grid.RowDefinitions>
             <StackPanel VerticalAlignment="Center">
 
-                <TextBlock Text="Личный кабинет"
+                <TextBlock Text="Регистрация:"
                            FontWeight="Light"
                            FontFamily="helvetica"
                            FontSize="22"
                            Foreground="White"
                            HorizontalAlignment="Center"/>
-                <TextBlock Text="        Имя пользователя:"
-                           FontWeight="Light"
-                           FontFamily="helvetica"
-                           FontSize="18"
-                           Foreground="White"
-                           HorizontalAlignment="Left"/>
 
             </StackPanel>
 
@@ -78,9 +72,11 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Button Content="Настройки" HorizontalAlignment="Left" Margin="129,258,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button Content="Сообщества" HorizontalAlignment="Left" Margin="129,296,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button Content="Сообщения" HorizontalAlignment="Left" Margin="129,335,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button Content="Литры" HorizontalAlignment="Left" Margin="129,377,0,0" VerticalAlignment="Top" Width="160"/>
+        <Label Content="Придумайте логин" HorizontalAlignment="Left" Margin="52,188,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="login_sp" HorizontalAlignment="Left" Height="23" Margin="52,219,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Придумайте пароль" HorizontalAlignment="Left" Margin="52,247,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="password_sp" HorizontalAlignment="Left" Height="23" Margin="52,278,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Button  x:Name="sign_up_button" Content="Зарегистрироваться" HorizontalAlignment="Left" Margin="52,530,0,0" VerticalAlignment="Top" Width="271" Height="34" Click="sign_up_button_Click"/>
+
     </Grid>
 </Window>
