--- a/ClientWPF/Messages.xaml
+++ b/ClientWPF/Messages.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ClientWPF.Account"
+﻿<Window x:Class="ClientWPF.Messages"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientWPF"
         mc:Ignorable="d"
-        Title="Account"  Width="370" Height="671"
+        Title="Messages" Width="370" Height="671"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
         >
@@ -47,25 +47,11 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Личный кабинет"
-                           FontWeight="Light"
-                           FontFamily="helvetica"
-                           FontSize="22"
-                           Foreground="White"
-                           HorizontalAlignment="Center" Margin="106,0,105,0"/>
-                <TextBlock Text="        Имя пользователя:"
-                           FontWeight="Light"
-                           FontFamily="helvetica"
-                           FontSize="18"
-                           Foreground="White"
-                           HorizontalAlignment="Left"/>
-
-            </StackPanel>
+            <StackPanel VerticalAlignment="Center"/>
 
 
         </Grid>
-        <Button Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Button_Click_1">
+        <Button Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Button_Click">
             <Button.Template>
                 <ControlTemplate  TargetType="Button">
                     <Grid>
@@ -77,11 +63,10 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Button Content="Настройки" HorizontalAlignment="Left" Margin="129,451,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button Content="Сообщества" HorizontalAlignment="Left" Margin="129,476,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button Content="Сообщения" HorizontalAlignment="Left" Margin="129,501,0,0" VerticalAlignment="Top" Width="160" Click="Button_Click"/>
-        <Button Content="Литры" HorizontalAlignment="Left" Margin="129,526,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button Content="Автомобили" HorizontalAlignment="Left" Margin="129,426,0,0" VerticalAlignment="Top" Width="160"/>
-        <Label x:Name="name_1" Content="Label" HorizontalAlignment="Left" Margin="68,190,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="mes_from" HorizontalAlignment="Left" Height="49" Margin="33,545,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="307"/>
+        <Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="292,552,0,0" VerticalAlignment="Top" Width="42" Height="34"/>
+        <TextBox x:Name="mes_t_sb" HorizontalAlignment="Left" Height="336" Margin="39,204,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="295" FontSize="16" 
+            BorderBrush="White" Background="#600A4030"
+            Padding="10"/>
     </Grid>
 </Window>
