Added take message method

--- a/ClientWPF/MainWindow.xaml
+++ b/ClientWPF/MainWindow.xaml
@@ -79,7 +79,7 @@
                     <TextBox x:Name="Login"
                              FontFamily="Helvetica"
                              FontWeight="Light"
-                             Text="Login"
+                             Text="admin"
                              FontSize="20"
                              HorizontalAlignment="Center"
                              Foreground="White"
@@ -103,7 +103,7 @@
                         <PasswordBox x:Name="Password" 
                                  FontFamily="Helvetica"
                              FontWeight="Light"
-                             Password="Password"
+                             Password="12345"
                              FontSize="20"
                              HorizontalAlignment="Center"
                              Foreground="White"
