--- a/ClientWPF/Messages.xaml
+++ b/ClientWPF/Messages.xaml
@@ -64,7 +64,7 @@
             </Button.Template>
         </Button>
         <TextBox x:Name="mes_from" HorizontalAlignment="Left" Height="49" Margin="33,545,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="307"/>
-        <Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="292,552,0,0" VerticalAlignment="Top" Width="42" Height="34"/>
+        <Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="292,552,0,0" VerticalAlignment="Top" Width="42" Height="34" Click="Send_Click"/>
         <TextBox x:Name="mes_t_sb" HorizontalAlignment="Left" Height="336" Margin="39,204,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="295" FontSize="16" 
             BorderBrush="White" Background="#600A4030"
             Padding="10"/>
