--- a/ClientWPF/litrs.xaml
+++ b/ClientWPF/litrs.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ClientWPF.Account"
+﻿<Window x:Class="ClientWPF.litrs"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientWPF"
         mc:Ignorable="d"
-        Title="Account"  Width="370" Height="671"
+        Title="litrs" Width="370" Height="671"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
         >
@@ -48,18 +48,12 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Личный кабинет"
+                <TextBlock Text="Количество литров:"
                            FontWeight="Light"
                            FontFamily="helvetica"
                            FontSize="22"
                            Foreground="White"
-                           HorizontalAlignment="Center" Margin="106,0,105,0"/>
-                <TextBlock Text="        Имя пользователя:"
-                           FontWeight="Light"
-                           FontFamily="helvetica"
-                           FontSize="18"
-                           Foreground="White"
-                           HorizontalAlignment="Left"/>
+                           HorizontalAlignment="Center" Margin="83,0,69,0" Width="218"/>
 
             </StackPanel>
 
@@ -77,11 +71,8 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Button x:Name="settings" Content="Настройки" HorizontalAlignment="Left" Margin="129,451,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button x:Name="groups" Content="Сообщества" HorizontalAlignment="Left" Margin="129,476,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button x:Name="messages" Content="Сообщения" HorizontalAlignment="Left" Margin="129,501,0,0" VerticalAlignment="Top" Width="160" Click="Button_Click"/>
-        <Button x:Name="litrs" Content="Литры" HorizontalAlignment="Left" Margin="129,526,0,0" VerticalAlignment="Top" Width="160" Click="Button_Click_2"/>
-        <Button x:Name="cars" Content="Автомобили" HorizontalAlignment="Left" Margin="129,426,0,0" VerticalAlignment="Top" Width="160"/>
-        <Label x:Name="name_1" Content="Label" HorizontalAlignment="Left" Margin="68,190,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="count_of_litrs" Content="Label" HorizontalAlignment="Left" Margin="159,235,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="increase" Content="+" FontSize="30" HorizontalAlignment="Left" Margin="211,314,0,0" VerticalAlignment="Top" Width="75" Height="51" Click="increase_Click"/>
+        <Button x:Name="dicrease" Content="-" FontSize="30" HorizontalAlignment="Left" Margin="78,314,0,0" VerticalAlignment="Top" Width="75" Height="51" Click="dicrease_Click"/>
     </Grid>
 </Window>
