--- a/ClientWPF/Cars.xaml
+++ b/ClientWPF/Cars.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ClientWPF.Account"
+﻿<Window x:Class="ClientWPF.cars"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientWPF"
         mc:Ignorable="d"
-        Title="Account"  Width="370" Height="671"
+        Title="cars" Width="370" Height="671"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
         >
@@ -48,24 +48,18 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Личный кабинет"
+                <TextBlock Text="Мои автомобили"
                            FontWeight="Light"
                            FontFamily="helvetica"
                            FontSize="22"
                            Foreground="White"
                            HorizontalAlignment="Center" Margin="106,0,105,0"/>
-                <TextBlock Text="        Имя пользователя:"
-                           FontWeight="Light"
-                           FontFamily="helvetica"
-                           FontSize="18"
-                           Foreground="White"
-                           HorizontalAlignment="Left"/>
 
             </StackPanel>
 
 
         </Grid>
-        <Button Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Button_Click_1">
+        <Button x:Name="Back" Width="52" Height="46"  RenderTransformOrigin="0.75,3.505" HorizontalAlignment="Center" Margin="0,613,0,0" VerticalAlignment="Top" Click="Button_Click_1">
             <Button.Template>
                 <ControlTemplate  TargetType="Button">
                     <Grid>
@@ -77,12 +71,8 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Button x:Name="settings" Content="Настройки" HorizontalAlignment="Left" Margin="129,451,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button x:Name="groups" Content="Сообщества" HorizontalAlignment="Left" Margin="129,476,0,0" VerticalAlignment="Top" Width="160"/>
-        <Button x:Name="messages" Content="Сообщения" HorizontalAlignment="Left" Margin="129,501,0,0" VerticalAlignment="Top" Width="160" Click="Button_Click"/>
-        <Button x:Name="litrs" Content="Литры" HorizontalAlignment="Left" Margin="129,526,0,0" VerticalAlignment="Top" Width="160" Click="Button_Click_2"/>
-        <Button x:Name="cars" Content="Автомобили" HorizontalAlignment="Left" Margin="129,426,0,0" VerticalAlignment="Top" Width="160" Click="cars_Click"/>
-        <Label x:Name="name_1" Content="" HorizontalAlignment="Left" Margin="68,190,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="friends" Content="Друзья" HorizontalAlignment="Left" Margin="129,401,0,0" VerticalAlignment="Top" Width="160"/>
+        <TextBox x:Name="List_of_cars" Background="#600A4030" HorizontalAlignment="Left" Height="193" Margin="62,201,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="254"/>
+        <Button  x:Name="AddCar" Content="Добавить автомобиль" HorizontalAlignment="Left" Margin="96,472,0,0" VerticalAlignment="Top" Width="178" Click="AddCar_Click"/>
+
     </Grid>
 </Window>
